force-app/main/default/objects/QTB_Price_Index__c/QTB_Price_Index__c.object-meta.xml
<CustomObject>
    <description>GIT#133 : Capability to quote deals with future years prices tied to external index</description>
    <label>Price Index</label>
    <nameField>
        <label>Name of the Index</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Indexes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>