force-app/main/default/objects/QTB_Price_Index__c/fields/QTB_Description__c.field-meta.xml
<CustomField>
    <fullName>QTB_Description__c</fullName>
    <description>GitLab # 133 - Description of the Pricing Index</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>