force-app/main/default/objects/QTB_Price_Index__c/fields/QTB_Methodology__c.field-meta.xml
<CustomField>
    <fullName>QTB_Methodology__c</fullName>
    <label>Methodology</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>