force-app/main/default/objects/QTB_Price_Index__c/fields/QTB_Price_Increase_Frequency__c.field-meta.xml
<CustomField>
    <fullName>QTB_Price_Increase_Frequency__c</fullName>
    <label>Price Increase Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>