force-app/main/default/objects/QTB_Price_Index__c/fields/QTB_Region__c.field-meta.xml
<CustomField>
    <fullName>QTB_Region__c</fullName>
    <label>Region</label>
    <length>20</length>
    <type>Text</type>
</CustomField>